--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -2,6 +2,11 @@ plugins {
     id "com.github.johnrengelman.shadow" version "7.1.2"
 }
 
+// ModMenu Maven
+repositories {
+    maven { url "https://maven.terraformersmc.com/releases/" }
+}
+
 architectury {
     platformSetupLoomIde()
     fabric()
@@ -18,6 +23,9 @@ configurations {
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "net.fabricmc.fabric-api:fabric-api:${rootProject.fabric_api_version}"
+
+    // Runtime with ModMenu
+    modRuntimeOnly "com.terraformersmc:modmenu:7.2.2"
 
     common(project(path: ":common", configuration: "namedElements")) { transitive false }
     shadowCommon(project(path: ":common", configuration: "transformProductionFabric")) { transitive false }
